# cmake_template

./: CMakeLists.txt
src/: CMakeLists.txt  func.cpp  main.cpp
src/lib/: CMakeLists.txt  func.h
tests/: CMakeLists.txt  test_case1.cpp  test_case2.cpp
